cleaning up code

--- a/app/views/stops/index.haml
+++ b/app/views/stops/index.haml
@@ -1,4 +1,4 @@
 .content
 .container
-  .btn-locate.btn.btn-primary.btn-block
-    Need JavaScript
+  .btn-locate.btn.btn-primary.btn-block.disabled
+    Loading...
