--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -27,7 +27,7 @@ $link-color: red
   .stop
     display: inline-block
     width: 260px
-    height: 100%
+    min-height: 200px
     margin-left: 15px
     vertical-align: top
     white-space: normal
