added Pebble app

--- a/app/views/stops/index.haml
+++ b/app/views/stops/index.haml
@@ -3,3 +3,9 @@
   .alert-container
   .btn-locate.btn.btn-primary.btn-block.disabled
     Loading...
+  .app-link
+    = link_to 'Get the Pebble app', 'bus-times-pebble.pbw'
+    %span.label.label-info Beta
+    %br/
+    (Requires
+    = link_to('httpebble', 'https://itunes.apple.com/ca/app/httpebble/id650174711?mt=8')+')'
